# FCC-Transmitter-Map

./: .env.example  .gitignore  Caddyfile  DEPLOY_TO_PRODUCTION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  PRODUCTION_READY.md  README.md  START_HERE.md  alembic.ini  deploy.bat  deploy.sh  deployment-checklist.md  docker-compose.https.yml  docker-compose.yml  init-db.sql  manage.py  nginx.conf  pyproject.toml  validate.sh
alembic/: env.py
app/: __init__.py  cli.py  config.py  database.py  grid_cache.py  main.py  models.py  scheduler.py  utils.py
app/routes/: api.py  web.py
app/static/: .gitkeep
app/templates/: 404.html  base.html  browse.html  county.html  frequency.html  index.html  license.html  search.html  state.html
app/templates/partials/: filter_results.html
fcc_importer/: __init__.py  downloader.py  loader.py  normalizer.py  parser.py
