[project]
name = "fcc-radio-map"
version = "1.0.0"
description = "FCC Radio License Map + Database"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "alembic>=1.14.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "shapely>=2.0.6",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7.0",
]
cache = [
    "redis>=5.2.0",
]

[project.scripts]
manage = "app.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100
